--- a/src/app/pages/update-student/update-student.page.html
+++ b/src/app/pages/update-student/update-student.page.html
@@ -4,11 +4,6 @@
     <ion-buttons slot="start">
       <ion-menu-button color="light"></ion-menu-button>
     </ion-buttons>
-    <ion-buttons slot="end">
-    <ion-button (click)="logout()">
-      <ion-icon slot="icon-only" name="exit"></ion-icon>
-    </ion-button>
-  </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
@@ -40,7 +35,9 @@
                   </ion-item>
                 </ion-list>
                 <div class="card-footer">
-                  <ion-button type="submit" color="danger" [disabled]="updateStudentForm.invalid">Ajouter
+                  <ion-button type="submit" color="warning" [disabled]="updateStudentForm.invalid">Modifier
+                  </ion-button>
+                  <ion-button type="button" color="danger" (click)="close();">Annuler
                   </ion-button>
                 </div>
 
