--- a/src/app/pages/course-details/course-details.page.html
+++ b/src/app/pages/course-details/course-details.page.html
@@ -4,15 +4,10 @@
     <ion-buttons slot="start">
       <ion-menu-button color="light"></ion-menu-button>
     </ion-buttons>
-    <ion-buttons slot="end">
-    <ion-button (click)="logout()">
-      <ion-icon slot="icon-only" name="exit"></ion-icon>
-    </ion-button>
-  </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content *ngIf="course as crs; else empty">
+<ion-content *ngIf="(course$ | async) as crs; else empty">
 <ion-grid>
   <ion-row>
     <ion-col>
@@ -30,6 +25,7 @@
                   <ion-label>{{ student.students }}</ion-label>
                 </ion-chip>
               </div>
+              <ion-button type="button" color="danger" style="margin: 10px;" (click)="close();">Fermer</ion-button>
             </ion-card-content>
           </ion-card>
         </div>
