--- a/src/app/pages/create-course/create-course.page.html
+++ b/src/app/pages/create-course/create-course.page.html
@@ -1,10 +1,9 @@
 <ion-header>
   <ion-toolbar color="danger">
     <ion-title>Cours</ion-title>
-    <ion-buttons slot="end">
-      <ion-button (click)="logout()">
-        <ion-icon color="dark" slot="icon-only" name="exit"></ion-icon>
-      </ion-button>
+    <ion-buttons slot="start">
+      <ion-menu-button color="light">
+      </ion-menu-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -37,8 +36,9 @@
           </ion-select>
         </ion-item>
         </ion-list>
-        <ion-button type="submit" color="danger" style="margin: 20px;" [disabled]="addCourseForm.invalid">Ajouter
-        </ion-button>
+        <ion-button type="submit" color="danger" style="margin: 10px;" [disabled]="addCourseForm.invalid">Ajouter</ion-button>
+        <ion-button type="button" color="warning" style="margin: 10px;" (click)="close();">Annuler</ion-button>
+
       </form>
     </ion-card-content>
   </ion-card>
