--- a/src/app/pages/update-student/update-student.page.html
+++ b/src/app/pages/update-student/update-student.page.html
@@ -8,14 +8,14 @@
 </ion-header>
 
 <ion-content *ngIf="student as st; else empty">
-<ion-grid>
-  <ion-row>
-    <ion-col>
-      <div>
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <div>
           <ion-card>
             <ion-card-header class="card-header">
-               <img src="../../../assets/images/student-avatar128x128.png" width="128" height="128">
-            <ion-card-title>{{ st.surname }}&nbsp;{{ st.name }}</ion-card-title>
+              <img src="../../../assets/images/student-avatar128x128.png" width="128" height="128">
+              <ion-card-title>{{ st.surname }}&nbsp;{{ st.name }}</ion-card-title>
               <ion-card-subtitle>{{st.dob}}</ion-card-subtitle>
             </ion-card-header>
             <ion-card-content class="card-body">
@@ -23,11 +23,13 @@
                 <ion-list>
                   <ion-item>
                     <ion-label>Pr&eacute;nom</ion-label>
-                    <ion-input type="text" placeholder="John Doe" formControlName="surname" name="surname" [value]="st.surname" requiredrequired></ion-input>
+                    <ion-input type="text" placeholder="John Doe" formControlName="surname" name="surname"
+                      [value]="st.surname" requiredrequired></ion-input>
                   </ion-item>
                   <ion-item>
                     <ion-label>Nom</ion-label>
-                    <ion-input type="text" placeholder="Nom" formControlName="name" name="name" [value]="st.name" required></ion-input>
+                    <ion-input type="text" placeholder="Nom" formControlName="name" name="name" [value]="st.name"
+                      required></ion-input>
                   </ion-item>
                   <ion-item>
                     <ion-label>Naissance</ion-label>
@@ -41,12 +43,12 @@
                   </ion-button>
                 </div>
 
-               </form>
+              </form>
             </ion-card-content>
           </ion-card>
         </div>
-    </ion-col>
-  </ion-row>
-</ion-grid>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
 <ng-template #empty>Aucune données...</ng-template>
