--- a/src/app/pages/courses/courses.page.html
+++ b/src/app/pages/courses/courses.page.html
@@ -13,20 +13,26 @@
         <div *ngIf="courses.length > 0; else nothing">
           <ion-list *ngFor="let course of courses">
             <ion-item-sliding>
-            <ion-item [routerLink]="['/home/course-details/', course._id]">
-              <ion-avatar slot="start">
-                <img src="../../../assets/images/graduate-icon.png" width="64" height="64">
-              </ion-avatar>
-              <ion-label>{{ course.name }}</ion-label>
-              <ion-label >Dur&eacute;e:&nbsp;{{ course.duration }}</ion-label>
-            </ion-item>
-            <ion-item-options side="end">
-              <ion-item-option color="light" [routerLink]="['/home/create-course']"><ion-icon name="add"></ion-icon></ion-item-option>
-              <ion-item-option color="warning" [routerLink]="['/home/update-course', course._id]"><ion-icon name="sync-outline"></ion-icon></ion-item-option>
-              <ion-item-option color="danger" (click)="deleteCourse(course._id)"><ion-icon name="trash-outline"></ion-icon></ion-item-option>
+              <ion-item [routerLink]="['/home/course-details/', course._id]">
+                <ion-avatar slot="start">
+                  <img src="../../../assets/images/graduate-icon.png" width="64" height="64">
+                </ion-avatar>
+                <ion-label>{{ course.name }}</ion-label>
+                <ion-label>Dur&eacute;e:&nbsp;{{ course.duration }}</ion-label>
+              </ion-item>
+              <ion-item-options side="end">
+                <ion-item-option color="light" [routerLink]="['/home/create-course']">
+                  <ion-icon name="add"></ion-icon>
+                </ion-item-option>
+                <ion-item-option color="warning" [routerLink]="['/home/update-course', course._id]">
+                  <ion-icon name="sync-outline"></ion-icon>
+                </ion-item-option>
+                <ion-item-option color="danger" (click)="deleteCourse(course._id)">
+                  <ion-icon name="trash-outline"></ion-icon>
+                </ion-item-option>
 
-            </ion-item-options>
-          </ion-item-sliding>
+              </ion-item-options>
+            </ion-item-sliding>
 
           </ion-list>
         </div>
@@ -34,10 +40,12 @@
     </ion-row>
   </ion-grid>
 
-  <ng-template  #nothing>
+  <ng-template #nothing>
     <div class="message">
       <p>Aucun cours</p>
-      <ion-button color="warning" [routerLink]="['/home/create-course']"><ion-icon name="add"></ion-icon></ion-button>
+      <ion-button color="warning" [routerLink]="['/home/create-course']">
+        <ion-icon name="add"></ion-icon>
+      </ion-button>
     </div>
   </ng-template>
 
