--- a/src/app/pages/students/students.page.html
+++ b/src/app/pages/students/students.page.html
@@ -13,20 +13,26 @@
         <div *ngIf="students.length > 0; else nothing">
           <ion-list *ngFor="let student of students">
             <ion-item-sliding>
-            <ion-item [routerLink]="['/home/student-details/', student._id]">
-              <ion-avatar slot="start">
-                <img src="../../../assets/images/student-avatar48x48.png" width="64" height="64">
-              </ion-avatar>
-              <ion-label>{{ student.surname }}&nbsp;{{ student.name }}</ion-label>
-              <ion-label >{{ student.dob }}</ion-label>
-            </ion-item>
-            <ion-item-options side="end">
-              <ion-item-option color="light" [routerLink]="['/home/create-student']"><ion-icon name="add"></ion-icon></ion-item-option>
-              <ion-item-option color="warning" [routerLink]="['/home/update-student', student._id]"><ion-icon name="sync-outline"></ion-icon></ion-item-option>
-              <ion-item-option color="danger" (click)="deleteStudent(student._id)"><ion-icon name="trash-outline"></ion-icon></ion-item-option>
+              <ion-item [routerLink]="['/home/student-details/', student._id]">
+                <ion-avatar slot="start">
+                  <img src="../../../assets/images/student-avatar48x48.png" width="64" height="64">
+                </ion-avatar>
+                <ion-label>{{ student.surname }}&nbsp;{{ student.name }}</ion-label>
+                <ion-label>{{ student.dob }}</ion-label>
+              </ion-item>
+              <ion-item-options side="end">
+                <ion-item-option color="light" [routerLink]="['/home/create-student']">
+                  <ion-icon name="add"></ion-icon>
+                </ion-item-option>
+                <ion-item-option color="warning" [routerLink]="['/home/update-student', student._id]">
+                  <ion-icon name="sync-outline"></ion-icon>
+                </ion-item-option>
+                <ion-item-option color="danger" (click)="deleteStudent(student._id)">
+                  <ion-icon name="trash-outline"></ion-icon>
+                </ion-item-option>
 
-            </ion-item-options>
-          </ion-item-sliding>
+              </ion-item-options>
+            </ion-item-sliding>
 
           </ion-list>
         </div>
@@ -34,10 +40,12 @@
     </ion-row>
   </ion-grid>
 
-  <ng-template  #nothing>
+  <ng-template #nothing>
     <div class="message">
       <p>Aucun étudiant</p>
-      <ion-button color="warning" [routerLink]="['/home/create-student']"><ion-icon name="add"></ion-icon></ion-button>
+      <ion-button color="warning" [routerLink]="['/home/create-student']">
+        <ion-icon name="add"></ion-icon>
+      </ion-button>
     </div>
   </ng-template>
 
