Adding register page

--- a/src/app/pages/course-details/course-details.page.html
+++ b/src/app/pages/course-details/course-details.page.html
@@ -15,7 +15,7 @@
           <ion-card>
             <ion-card-header class="card-header">
               <img src="../../../assets/images/graduate-icon.png" width="128" height="128">
-              <ion-card-title>{{ crs.name }}</ion-card-title>
+              <ion-card-title color="light">{{ crs.name }}</ion-card-title>
               <ion-card-subtitle>Dur&eacute;e&nbsp;{{crs.duration}}</ion-card-subtitle>
               <ion-card-subtitle>D&eacute;but:&nbsp;{{crs.start}}</ion-card-subtitle>
             </ion-card-header>
