--- a/src/app/components/slide/slide.component.html
+++ b/src/app/components/slide/slide.component.html
@@ -4,7 +4,7 @@
   <h2 style="color: #333">IMANAGE 360</h2>
   </ion-slide>
   <ion-slide>
-  <h2>Slide 2 Title</h2>
+  <h2>Autre Diapo...</h2>
   </ion-slide>
 
   </ion-slides>
