--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -17,8 +17,8 @@
     <form #f="ngForm" (ngSubmit)="login(); f.resetForm()">
       <ion-grid>
         <ion-row>
-          <ion-col size-sm="6" offset-sm="3">
-            <ion-list style="display: flex; flex-direction:column; align-items: flex-start;">
+          <ion-col class="column">
+            <ion-list class="list">
               <ion-item>
                 <ion-icon color="medium" size="large" name="mail" slot="start"></ion-icon>
                 <ion-label position="floating">Courriel</ion-label>
@@ -45,7 +45,7 @@
           </ion-col>
         </ion-row>
         <ion-row>
-          <ion-col size-sm="6" offset-sm="3">
+          <ion-col class="column">
             <ion-button type="submit" color="danger" expand="block" [disabled]="!f.valid">
               Connexion
             </ion-button>
@@ -56,18 +56,5 @@
         </ion-row>
       </ion-grid>
     </form>
-
-
-
   </ion-card>
-  <ion-grid>
-    <ion-row>
-      <ion-col size="3">
-
-      </ion-col>
-
-    </ion-row>
-
-
-  </ion-grid>
 </ion-content>
