--- a/src/app/pages/student-details/student-details.page.html
+++ b/src/app/pages/student-details/student-details.page.html
@@ -15,7 +15,7 @@
           <ion-card>
             <ion-card-header class="card-header">
               <img src="../../../assets/images/student-avatar128x128.png" width="128" height="128">
-              <ion-card-title>{{ st.surname }}&nbsp;{{ st.name }}</ion-card-title>
+              <ion-card-title color="light">{{ st.surname }}&nbsp;{{ st.name }}</ion-card-title>
               <ion-card-subtitle>{{st.dob}}</ion-card-subtitle>
             </ion-card-header>
             <ion-card-content class="card-body">
