--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -209,7 +209,7 @@
     --ion-color-step-100: #ffffff;
     --ion-color-step-150: #ffffff;
     --ion-color-step-200: #414141;
-    --ion-color-step-250: #929292;
+    --ion-color-step-250: #1c1c1c;
     --ion-color-step-300: #595959;
     --ion-color-step-350: #656565;
     --ion-color-step-400: #717171;
