--- a/src/app/pages/course-details/course-details.page.scss
+++ b/src/app/pages/course-details/course-details.page.scss
@@ -5,6 +5,11 @@
   justify-content: center;
 }
 
+.card-title {
+  color: #333;
+  margin-bottom: 10px;
+}
+
 .card-body {
   display: flex;
   flex-direction: column;
