--- a/src/app/pages/create-course/create-course.page.html
+++ b/src/app/pages/create-course/create-course.page.html
@@ -11,7 +11,7 @@
 <ion-content>
   <ion-card>
     <ion-card-header class="card-header">
-      <ion-card-title color="dark">Ajouter un cours</ion-card-title>
+      <ion-card-title class="card-title">Ajouter un cours</ion-card-title>
       <img src="../../../assets/images/graduate-icon.png" alt="icon" width="128" height="128">
     </ion-card-header>
     <ion-card-content>
