--- a/src/app/pages/create-course/create-course.page.scss
+++ b/src/app/pages/create-course/create-course.page.scss
@@ -6,6 +6,10 @@
   align-items: center;
 }
 
+.card-title {
+  color: #333;
+}
+
 .my-custom-interface .select-interface-option {
   --color: #333;
 }
