--- a/src/app/pages/create-student/create-student.page.html
+++ b/src/app/pages/create-student/create-student.page.html
@@ -11,7 +11,7 @@
 <ion-content>
   <ion-card>
     <ion-card-header class="card-header">
-      <ion-card-title color="dark">Ajouter un étudiant</ion-card-title>
+      <ion-card-title class="card-title" >Ajouter un étudiant</ion-card-title>
       <img src="../../../assets/images/graduate-icon128.png" alt="">
     </ion-card-header>
     <ion-card-content>
