Fixing bug in subscription

--- a/src/app/pages/course-details/course-details.page.html
+++ b/src/app/pages/course-details/course-details.page.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content *ngIf="(course$ | async) as crs; else empty">
+<ion-content *ngIf="course as crs; else empty">
   <ion-grid>
     <ion-row>
       <ion-col>
