--- a/src/app/pages/create-course/create-course.page.html
+++ b/src/app/pages/create-course/create-course.page.html
@@ -39,7 +39,7 @@
         </ion-list>
         <ion-button type="submit" color="danger" style="margin: 10px;" [disabled]="addCourseForm.invalid">Ajouter
         </ion-button>
-        <ion-button type="button" color="warning" style="margin: 10px;" (click)="close();">Annuler</ion-button>
+        <ion-button type="button" color="medium" style="margin: 10px;" (click)="close();">Annuler</ion-button>
 
       </form>
     </ion-card-content>
