--- a/src/app/pages/courses/courses.page.html
+++ b/src/app/pages/courses/courses.page.html
@@ -3,6 +3,11 @@
     <ion-menu-button color="light">
     </ion-menu-button>
   </ion-buttons>
+  <ion-buttons slot="end">
+    <ion-button color="light" [routerLink]="['/home/create-course']">
+      <ion-icon class="add-btn" name="add"></ion-icon>
+    </ion-button>
+  </ion-buttons>
   <ion-title>COURS</ion-title>
 </ion-toolbar>
 
