--- a/src/app/pages/courses/courses.page.scss
+++ b/src/app/pages/courses/courses.page.scss
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+.add-btn {
+  color: #ffffff;
+  font-size: 2.2em;
+}
+
 .item {
   display: flex;
   flex-direction: column;
