--- a/src/app/pages/create-student/create-student.page.html
+++ b/src/app/pages/create-student/create-student.page.html
@@ -32,7 +32,7 @@
         </ion-list>
         <ion-button type="submit" color="danger" style="margin: 10px;" [disabled]="addStudentForm.invalid">Ajouter
         </ion-button>
-        <ion-button type="button" color="warning" style="margin: 10px;" (click)="close();">Annuler</ion-button>
+        <ion-button type="button" color="medium" style="margin: 10px;" (click)="close();">Annuler</ion-button>
       </form>
     </ion-card-content>
   </ion-card>
