Fixing bug in subscription

--- a/src/app/pages/update-course/update-course.page.html
+++ b/src/app/pages/update-course/update-course.page.html
@@ -45,7 +45,7 @@
                   </ion-item>
                 </ion-list>
                 <div class="card-footer">
-                  <ion-button type="submit" color="warning" [disabled]="updateCourseForm.invalid">Modifier
+                  <ion-button type="submit" color="medium" [disabled]="updateCourseForm.invalid">Modifier
                   </ion-button>
                   <ion-button type="button" color="danger" (click)="close();">Annuler
                   </ion-button>
