--- a/src/app/pages/student-details/student-details.page.html
+++ b/src/app/pages/student-details/student-details.page.html
@@ -16,7 +16,7 @@
             <ion-card-header class="card-header">
               <img src="../../../assets/images/student-avatar128x128.png" width="128" height="128">
               <ion-card-title class="card-title" >{{ st.surname }}&nbsp;{{ st.name }}</ion-card-title>
-              <ion-card-subtitle>{{st.dob}}</ion-card-subtitle>
+              <ion-card-subtitle>{{st.dob | date: 'dd/MM/yyyy'}}</ion-card-subtitle>
             </ion-card-header>
             <ion-card-content class="card-body">
               <div *ngFor="let course of studentCourses">
