--- a/src/app/pages/update-course/update-course.page.html
+++ b/src/app/pages/update-course/update-course.page.html
@@ -27,13 +27,11 @@
                   </ion-item>
                   <ion-item>
                     <ion-label>D&eacute;but</ion-label>
-                    <ion-input type="text" placeholder="9:00" formControlName="start" name="start" [value]="crs.start"
-                      required></ion-input>
+                    <ion-datetime placeholder="{{crs.start}}" minuteValues="0,30" displayFormat="h:mm" formControlName="start" [value]="crs.start" required></ion-datetime>
                   </ion-item>
                   <ion-item>
                     <ion-label>Dur&eacute;e</ion-label>
-                    <ion-input type="text" placeholder="3:00" formControlName="duration" name="duration"
-                      [value]="crs.duration" required></ion-input>
+                    <ion-datetime placeholder="{{crs.duration}}" minuteValues="0,30" displayFormat="h:mm" formControlName="duration" [value]="crs.duration" required></ion-datetime>
                   </ion-item>
                   <ion-item>
                     <ion-label>Étudiant(s)</ion-label>
