Fixing datetime inputs

--- a/src/app/pages/create-course/create-course.page.html
+++ b/src/app/pages/create-course/create-course.page.html
@@ -23,11 +23,11 @@
           </ion-item>
           <ion-item>
             <ion-label>D&eacute;but</ion-label>
-            <ion-input type="text" placeholder="9:00" formControlName="start" required></ion-input>
+            <ion-datetime placeholder="Choisir" minuteValues="0,30" displayFormat="h:mm" formControlName="start" required></ion-datetime>
           </ion-item>
           <ion-item>
             <ion-label>Dur&eacute;e</ion-label>
-            <ion-input type="text" placeholder="3:00" formControlName="duration" required></ion-input>
+            <ion-datetime placeholder="Choisir" minuteValues="0,30" displayFormat="h:mm" formControlName="duration" required></ion-datetime>
           </ion-item>
           <ion-item>
             <ion-label>Étudiant(s)</ion-label>
