--- a/src/app/pages/courses/courses.page.html
+++ b/src/app/pages/courses/courses.page.html
@@ -23,7 +23,7 @@
                   <img src="../../../assets/images/graduate-icon.png" width="64" height="64">
                 </ion-avatar>
                 <ion-label>{{ course.name }}</ion-label>
-                <ion-label>Dur&eacute;e:&nbsp;{{ course.duration }}</ion-label>
+                <ion-label>Dur&eacute;e:&nbsp;{{ course.duration | date: 'h:mm' }}</ion-label>
               </ion-item>
               <ion-item-options side="end">
                 <ion-item-option color="light" [routerLink]="['/home/create-course']">
